--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -2,7 +2,7 @@
   "name": "apni_dukaan",
   "version": "0.1.0",
   "private": true,
-  
+   "proxy":"https://express-out.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.2",
