--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,8 +23,9 @@
    
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+    
+    "start": "react-scripts --openssl-legacy-provider start",
+"build": "react-scripts --openssl-legacy-provider build"
   },
   "eslintConfig": {
     "extends": [
