--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,9 +23,9 @@
    
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    
-    "start": "react-scripts --openssl-legacy-provider start",
-"build": "react-scripts --openssl-legacy-provider build"
+    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts --openssl-legacy-provider start"
+
   },
   "eslintConfig": {
     "extends": [
