--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,9 +23,9 @@
    
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "start": "react-scripts --openssl-legacy-provider start"
-
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+ 
   },
   "eslintConfig": {
     "extends": [
